@@ -23,85 +23,70 @@ pmax <- function (..., na.rm = FALSE)
 {
     elts <- list(...)
     if(length(elts) == 0L) stop("no arguments")
-    i4 <- isS4(elts[[1L]])
-    if(!i4 && all(vapply(elts, function(x) is.atomic(x) && !is.object(x), NA))) {
-	## NB: NULL passes is.atomic
+    if(all(vapply(elts, function(x) is.atomic(x) && !is.object(x), NA))) { # incl. NULL
 	mmm <- .Internal(pmax(na.rm, ...))
+	mostattributes(mmm) <- attributes(elts[[1L]])
     } else {
-	mmm <- as.vector(elts[[1L]]) # attr(mmm, "dim") <- NULL  # dim<- would drop names
+	mmm <- elts[[1L]] ## attr(mmm, "dim") <- NULL  # dim<- would drop names
 	has.na <- FALSE
 	for (each in elts[-1L]) {
-	    each <- as.vector(each) # attr(each, "dim") <- NULL
+	    ## attr(each, "dim") <- NULL
 	    l1 <- length(each); l2 <- length(mmm)
-	    if(l2 < l1) {
-		if (l2 && l1 %% l2)
+	    if(l2 && (l2 < l1 || !l1)) {
+		if (l1 %% l2)
 		    warning("an argument will be fractionally recycled")
 		mmm <- rep(mmm, length.out = l1)
-	    } else if(l1 && l1 < l2) {
+	    } else if(l1 && (l1 < l2 || !l2)) {
 		if (l2 %% l1)
 		    warning("an argument will be fractionally recycled")
 		each <- rep(each, length.out = l2)
 	    }
-	    nas <- cbind(is.na(mmm), is.na(each))
+	    nas <- cbind(as.vector(is.na(mmm)), as.vector(is.na(each)))
 	    if(has.na || (has.na <- any(nas))) {
 		mmm [nas[, 1L]] <- each[nas[, 1L]]
 		each[nas[, 2L]] <- mmm [nas[, 2L]]
 	    }
-	    change <- mmm < each
+	    change <- as.vector(mmm < each)
 	    change <- change & !is.na(change)
 	    mmm[change] <- each[change]
 	    if (has.na && !na.rm) mmm[nas[, 1L] | nas[, 2L]] <- NA
 	}
     }
-    if(i4) {
-	r <- elts[[1L]] # i.e. a valid S4 object
-	tryCatch({ r[] <- mmm; r }, error = mmm)
-    }
-    else { # !isS4(.) ; to improve for S3 ?
-	mostattributes(mmm) <- attributes(elts[[1L]])
-	mmm
-    }
+    mmm
 }
 
 pmin <- function (..., na.rm = FALSE)
 {
     elts <- list(...)
     if(length(elts) == 0L) stop("no arguments")
-    i4 <- isS4(elts[[1L]])
-    if(!i4 && all(vapply(elts, function(x) is.atomic(x) && !is.object(x), NA))) {
+    if(all(vapply(elts, function(x) is.atomic(x) && !is.object(x), NA))) { # incl. NULL
 	mmm <- .Internal(pmin(na.rm, ...))
+	mostattributes(mmm) <- attributes(elts[[1L]])
     } else {
-	mmm <- as.vector(elts[[1L]]) # attr(mmm, "dim") <- NULL  # dim<- would drop names
+	mmm <- elts[[1L]] ## attr(mmm, "dim") <- NULL  # dim<- would drop names
 	has.na <- FALSE
 	for (each in elts[-1L]) {
-	    each <- as.vector(each) # attr(each, "dim") <- NULL
+	    ## attr(each, "dim") <- NULL
 	    l1 <- length(each); l2 <- length(mmm)
-	    if(l2 < l1) {
-		if (l2 && l1 %% l2)
+	    if(l2 && (l2 < l1 || !l1)) {
+		if (l1 %% l2)
 		    warning("an argument will be fractionally recycled")
 		mmm <- rep(mmm, length.out = l1)
-	    } else if(l1 && l1 < l2) {
+	    } else if(l1 && (l1 < l2 || !l2)) {
 		if (l2 %% l1)
 		    warning("an argument will be fractionally recycled")
 		each <- rep(each, length.out = l2)
 	    }
-	    nas <- cbind(is.na(mmm), is.na(each))
+	    nas <- cbind(as.vector(is.na(mmm)), as.vector(is.na(each)))
 	    if(has.na || (has.na <- any(nas))) {
 		mmm [nas[, 1L]] <- each[nas[, 1L]]
 		each[nas[, 2L]] <- mmm [nas[, 2L]]
 	    }
-	    change <- mmm > each
+	    change <- as.vector(mmm > each)
 	    change <- change & !is.na(change)
 	    mmm[change] <- each[change]
 	    if (has.na && !na.rm) mmm[nas[, 1L] | nas[, 2L]] <- NA
 	}
     }
-    if(i4) {
-	r <- elts[[1L]] # i.e. a valid S4 object
-	tryCatch({ r[] <- mmm; r }, error = mmm)
-    }
-    else { # !isS4(.) ; to improve for S3 ?
-	mostattributes(mmm) <- attributes(elts[[1L]])
-	mmm
-    }
+    mmm
 }
